# NanoTrackTRT

./: CMakeLists.txt  README.md  test.cpp  test.py
convert/: backbone.cache  calibrator.py  converter.py  head.cache
include/: config.h  model.h  ntk_model.h  ntk_track.h  track.h  utils.h
src/: model.cpp  ntk_model.cpp  ntk_track.cpp  python_interface.cpp  track.cpp  utils.cpp
weights/: backbone_quant_inputs.txt  head_quant_inputs.txt  nanotrack_backbone_dy_sim.onnx  nanotrack_backbone_int8.trt  nanotrack_head.trt  nanotrack_head_int8.trt
weights/head_quant_inputs/: 0.npy  1.npy  10.npy  100.npy  101.npy  102.npy  103.npy  104.npy  105.npy  106.npy  107.npy  108.npy  109.npy  11.npy  110.npy  111.npy  112.npy  113.npy  114.npy  115.npy  116.npy  117.npy  118.npy  119.npy  12.npy  120.npy  121.npy  122.npy  123.npy  124.npy  125.npy  126.npy  127.npy  128.npy  129.npy  13.npy  130.npy  131.npy  132.npy  133.npy  (+644 more)
